--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,9 +1,21 @@
-input {
+input, select {
     width: 2rem;
     text-align: center;
     border-radius: 0.65rem;
     margin: 0 0.25rem !important;
     color: black !important;
+}
+
+select {
+  width: 6rem;
+  padding: 0.125rem;
+  background-color: rgba(245, 158, 11, 1);
+  border: 1px solid;
+}
+
+.stride:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* Chrome, Safari, Edge, Opera */
